force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description>This object contains the summary of all the transactional details linked with a patient procedure. Also it contains the rollup for patient paid amount, total refund amount, total discount applied, primary insurance paid and secondary insurance paid amount.</description>
    <label>Master Transaction</label>
    <nameField>
        <displayFormat>PAYMENT-{0000}</displayFormat>
        <label>Payment Received Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>