force-app/main/default/objects/Payment_Transaction__c/fields/Cpt_Codes__c.field-meta.xml
<CustomField>
    <fullName>Cpt_Codes__c</fullName>
    <label>CPT Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>