force-app/main/default/objects/Payment_Transaction__c/fields/Date_FreeText__c.field-meta.xml
<CustomField>
    <fullName>Date_FreeText__c</fullName>
    <label>Date FreeText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>