force-app/main/default/objects/Payment_Transaction__c/fields/Date_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Service__c</fullName>
    <label>Date Of Service</label>
    <type>Date</type>
</CustomField>