force-app/main/default/objects/Payment_Transaction__c/fields/Divide_the_Discount_Amount_equally_among__c.field-meta.xml
<CustomField>
    <fullName>Divide_the_Discount_Amount_equally_among__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divide the Discount Amount Equally</label>
    <type>Checkbox</type>
</CustomField>