force-app/main/default/objects/Payment_Transaction__c/fields/ERA_Arrived__c.field-meta.xml
<CustomField>
    <fullName>ERA_Arrived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERA Arrived</label>
    <type>Checkbox</type>
</CustomField>