force-app/main/default/objects/Payment_Transaction__c/fields/Expected_Receivable_amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Receivable_amount__c</fullName>
    <label>Expected Receivable amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>