force-app/main/default/objects/Payment_Transaction__c/fields/Insurance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payments__c</fullName>
    <label>Insurance Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>