force-app/main/default/objects/Payment_Transaction__c/fields/Insurance_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Responsibility__c</fullName>
    <label>Insurance Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>