force-app/main/default/objects/Payment_Transaction__c/fields/Master_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Master_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Transaction</label>
    <referenceTo>Master_Transaction__c</referenceTo>
    <relationshipName>Payment_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>