force-app/main/default/objects/Payment_Transaction__c/fields/Other_Discount__c.field-meta.xml
<CustomField>
    <fullName>Other_Discount__c</fullName>
    <label>Other Discount</label>
    <summarizedField>Transactions__c.Amount_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Transactions__c.Type_of_Payment__c</field>
        <operation>equals</operation>
        <value>Discount</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transactions__c.Payment_Received_By__c</field>
        <operation>equals</operation>
        <value>Patient</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transactions__c.Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </summaryFilterItems>
    <summaryForeignKey>Transactions__c.Master_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>