force-app/main/default/objects/Payment_Transaction__c/fields/Other_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Other_Discounts__c</fullName>
    <label>Other Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>