force-app/main/default/objects/Payment_Transaction__c/fields/Patient_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Patient_Outstanding__c</fullName>
    <label>Patient Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>