force-app/main/default/objects/Payment_Transaction__c/fields/Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_Responsibility__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>