force-app/main/default/objects/Payment_Transaction__c/fields/PatientOutstanding__c.field-meta.xml
<CustomField>
    <fullName>PatientOutstanding__c</fullName>
    <formula>Actual_Price__c -  Insurance_Paid__c - Secondary_Insurance_Paid__c - Other_Discount__c -  Total_Actual_Patient_Paid_Amount__c  - Total_Adjustment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>