force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Adjustments__c</fullName>
    <label>Payment Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>