force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Schedule__c</referenceTo>
    <relationshipName>Payment_Received</relationshipName>
    <type>Lookup</type>
</CustomField>