force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Sub_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Sub_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipName>Payment_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>