force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Net Banking</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>