force-app/main/default/objects/Payment_Transaction__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer</label>
    <referenceTo>Payor__c</referenceTo>
    <relationshipLabel>Master Transaction</relationshipLabel>
    <relationshipName>Master_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>