force-app/main/default/objects/Payment_Transaction__c/fields/Procedure_Name__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Name__c</fullName>
    <label>Procedure Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>