force-app/main/default/objects/Payment_Transaction__c/fields/Procedure_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedure Utilized</label>
    <type>Checkbox</type>
</CustomField>