force-app/main/default/objects/Payment_Transaction__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipName>Payment_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>