force-app/main/default/objects/Payment_Transaction__c/fields/Secondary_Insurance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Paid__c</fullName>
    <description>Amount that paid from secondary insurance</description>
    <label>Secondary Insurance Paid</label>
    <summarizedField>Transactions__c.Amount_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Transactions__c.Payment_Received_By__c</field>
        <operation>equals</operation>
        <value>Secondary Insurance</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transactions__c.Type_of_Payment__c</field>
        <operation>notEqual</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transactions__c.Reverse_Reconciliation__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transactions__c.Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </summaryFilterItems>
    <summaryForeignKey>Transactions__c.Master_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>