force-app/main/default/objects/Payment_Transaction__c/fields/Total_Actual_Patient_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Patient_Paid_Amount__c</fullName>
    <description>This is the final patient paid amount</description>
    <formula>Total_Paid_Amount__c  -  Total_Patient_Refund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Patient Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>