force-app/main/default/objects/Payment_Transaction__c/fields/Total_Patient_Refund__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Refund__c</fullName>
    <description>Total amount refunded to patient.</description>
    <label>Total Patient Refund</label>
    <summarizedField>Transactions__c.Amount_Paid__c</summarizedField>
    <summaryFilterItems>
        <field>Transactions__c.Type_of_Payment__c</field>
        <operation>equals</operation>
        <value>Refund</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transactions__c.Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Successful</value>
    </summaryFilterItems>
    <summaryForeignKey>Transactions__c.Master_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>