force-app/main/default/objects/Payment_Transaction__c/fields/Total_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Amount__c</fullName>
    <label>Total Received Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>