force-app/main/default/objects/Payment_Transaction__c/fields/Total_Remaining_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Amount__c</fullName>
    <label>Total Remaining Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>