force-app/main/default/objects/Payment_Transaction__c/fields/Type_of_Discount__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Discount__c</fullName>
    <label>Type of Discount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>