force-app/main/default/objects/Payment_Transaction__c/fields/Units_days__c.field-meta.xml
<CustomField>
    <fullName>Units_days__c</fullName>
    <label>Units/days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>