force-app/main/default/objects/Payment_Transaction__c/recordTypes/Insurance_Payment.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Payment</fullName>
    <active>true</active>
    <label>Insurance Payment</label>
</RecordType>