force-app/main/default/objects/Payment_Transaction__c/recordTypes/Private_Payment.recordType-meta.xml
<RecordType>
    <fullName>Private_Payment</fullName>
    <active>true</active>
    <label>Private Payment</label>
</RecordType>