force-app/main/default/objects/Payment_Transaction__c/recordTypes/Sub_Transaction.recordType-meta.xml
<RecordType>
    <fullName>Sub_Transaction</fullName>
    <active>true</active>
    <label>Sub Transaction</label>
</RecordType>