force-app/main/default/objects/Payment_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Procedure_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Payment_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Hannah Brown</value>
    </filters>
    <label>All</label>
</ListView>