force-app/main/default/objects/Payment_Transaction__c/listViews/Private_Payment_Transactions.listView-meta.xml
<ListView>
    <fullName>Private_Payment_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Actual_Price__c</columns>
    <columns>Procedure__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment_Transaction__c.Private_Payment</value>
    </filters>
    <label>Private Payment Transactions</label>
</ListView>